Creating file named AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Julio J. Bonilla Chaparro <juliojavierbonilla@gmail.com>
+Yoruan Orta <yoruanorta50@gmail.com>
