--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,9 @@
 # This file lists all contributors to the repository.
 
-Julio J. Bonilla Chaparro <juliojavierbonilla@gmail.com>
-Yoruan Orta <yoruanorta50@gmail.com>
+Julio J. Bonilla Chaparro
+Yoruan Orta
+
+# Emails of all of the contributors.
+
+<juliojavierbonilla@gmail.com>
+<yoruanorta50@gmail.com>
